FIXED: footer overlapping FIXED: navbar on new menu item page FIXED: table for mobile TODO: fix table row for buttons on mobile

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -44,7 +44,7 @@ scroll-behavior: smooth;
 }
 
 body{
-	
+	padding-bottom: 80px;
 	margin: 0px;
  	background-color:#e9e9e9; 
 	font-family: Arial, Helvetica, sans-serif;		
